--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
   "private": true,
+  "packageManager": "pnpm@7.5.0",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
     "start": "node .output/server/index.mjs",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "pinia": "^2.0.11"
+    "lint": "eslint .",
+    "postinstall": "nuxi prepare"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.8",
-    "@iconify-json/carbon": "^1.1.1",
-    "@iconify-json/twemoji": "^1.1.1",
-    "@pinia/nuxt": "^0.1.8",
-    "@unocss/nuxt": "^0.27.6",
-    "@vueuse/nuxt": "^8.0.0",
-    "eslint": "^8.10.0",
-    "nuxt3": "latest",
-    "typescript": "^4.6.2"
-  },
-  "pnpm": {
-    "overrides": {
-      "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-      "@nuxt/kit-edge": "latest"
-    }
+    "@antfu/eslint-config": "^0.25.2",
+    "@iconify-json/carbon": "^1.1.7",
+    "@iconify-json/twemoji": "^1.1.5",
+    "@nuxtjs/color-mode": "^3.1.4",
+    "@pinia/nuxt": "^0.3.1",
+    "@unocss/nuxt": "^0.45.4",
+    "@vueuse/nuxt": "^9.1.0",
+    "eslint": "^8.21.0",
+    "nuxt": "^3.0.0-rc.6",
+    "pinia": "^2.0.17",
+    "typescript": "^4.7.4"
   }
 }
